--- a/MyBlog-fontend/src/app/app.component.html
+++ b/MyBlog-fontend/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div id="main">
   <h1>Welcome to Donald Abdullah-Robinson's Blog!</h1>
 
+  <!-- Top header section. -->
   <div id="header">
     <!-- Convert into a toggle -->
     <button class="btn btn-success" (click)="pageMode = 'view'">View Mode</button>
@@ -10,6 +11,7 @@
     <button class="btn btn-success" (click)="setTabVisibility(2)">Show All</button>
   </div>
 
+  <!-- Section for creating a new blog post. -->
   <div id="create_post">
     <h1>Create a New Blog Post:</h1>
     <form (ngSubmit)="doPostOnSubmit()" #postForm="ngForm">
@@ -22,8 +24,10 @@
     </form>
   </div>
   
+  <!-- Section for viewing most recent posts. -->
   <div id="tab1" *ngIf="tabVisibility['1']">
 
+    <!-- Edit mode -->
     <div id="recent_posts_edit" *ngIf="pageMode == 'edit'">
       <h1>{{getKeys(allPostData2[allYears[0]])[0]}} {{allYears[0]}}'s Blog Posts - Edit Mode</h1>
       <div *ngFor="let day of getKeys(allPostData2[allYears[0]][getKeys(allPostData2[allYears[0]])[0]]).reverse()">
@@ -31,10 +35,6 @@
         <div *ngFor="let dayData of getFilteredData(allYears[0], getKeys(allPostData2[allYears[0]])[0], day).reverse()">
           <p>
             {{dayData['time']}}
-            <!--
-              TODO, We should bind create a unique id for each text area in dayData and use that as a reference in the put and delete methods.
-              id="generateUniqueId()" 
-            -->
             <textarea cols="100" rows="1" value="{{dayData['content']}}" [(ngModel)]="dayData['content']"></textarea>
           </p>
           <button type="submit" class="btn btn-edit" (click)="doPutEditPost(dayData['content'], dayData['_id'])">Save Changes</button>
@@ -43,6 +43,7 @@
       </div>
     </div>
 
+    <!-- View Mode -->
     <div id="recent_posts_view" *ngIf="pageMode == 'view'">
       <h1>{{getKeys(allPostData2[allYears[0]])[0]}} {{allYears[0]}}'s Blog Posts</h1>
       <div *ngFor="let day of getKeys(allPostData2[allYears[0]][getKeys(allPostData2[allYears[0]])[0]]).reverse()">
@@ -56,8 +57,10 @@
     </div>
   </div>
 
+  <!-- Section for viewing all posts. -->
   <div id="tab2" *ngIf="tabVisibility['2']">
 
+    <!-- Edit mode -->
     <div id="all_posts_edit" *ngIf="pageMode == 'edit'">
       <h1>All Blog Posts - Edit Mode</h1>
       <div *ngFor="let year of allYears">
@@ -78,6 +81,7 @@
       </div>
     </div>
 
+    <!-- View Mode -->
     <div id="all_posts_view" *ngIf="pageMode == 'view'">
         <h1>All Blog Posts</h1>
         <div *ngFor="let year of allYears">
