--- a/MyBlog-fontend/src/app/app.component.css
+++ b/MyBlog-fontend/src/app/app.component.css
@@ -1,27 +1,36 @@
 button {
-    margin-right: 5px;
+  margin-right: 5px;
+}
+
+#main {
+  background-color: #eeeeee;
+  max-width: 1200px;
+  width: 100%;
+  margin: auto;
+  padding: 20px;
+}
+
+.customJumbo {
+  background-color: rgb(223, 223, 223);
+  padding: 10px;
 }
 
 .blog_post_header {
-    background-color: #bbb;
+  background-color: #bbb;
 }
 
 .day_style {
-    background-color: #ccc;
-}
-
-.post_container {
-    display: flex;
-    flex-wrap: wrap;
+  background-color: #ccc;
 }
 
 .post {
-    border: 5px solid lightblue;
-    margin: 2px;
-    padding: 5px;
-    width: 500px;
-    height: 100%;
-    min-height: 100px;
-    max-height: 500px;
-    overflow: auto;
+  border: 5px solid lightblue;
+  margin: 2px;
+  padding: 5px;
+  height: 100%;
+  overflow: auto;
+}
+
+button {
+    width: 120px;
 }
